updated count char, add class

--- a/mini-diary.html
+++ b/mini-diary.html
@@ -15,11 +15,10 @@
     <!-- boostrap -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-
     <link
       rel="stylesheet"
       type="text/css"
@@ -27,53 +26,55 @@
       href="mini-diary.css"
     />
     <link rel="stylesheet" type="text/css" media="screen" href="others.css" />
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Mini Diary</title>
-        <!-- favicon -->
-        <link rel="shortcut icon" href="https://www.hubspot.com/hubfs/HSLogo_sprocket_color_png-1.png">
-        <!-- boostrap -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" media="screen" href="mini-diary.css" />
-    </head>
-  
-    <body> 
-        <div class= "container">
-            <nav class="nav">
-                <a class="nav-link active" href="#">Active</a>
-                <a class="nav-link" href="#">Link</a> 
-                <a class="nav-link" href="#">Link</a>
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </nav>
-        </div>
-     <div class= "container">
-         <div class ="row">
-             <div class = "col-4 border">
-                <div id = "userInfo" class= "border">userInfo</div>
-                <div id = "highLight" class= "border">highLight</div>
-                <div id = "hasTag" class= "border">hasTag</div>
-                <div id = "Friends" class= "border">Friends</div>
-             </div>
-             <div class = "col-8 border">
-                <div id = "inputText" class = "border" >
-                    <div class="input-group mb-3">
-                            <span><img src="..." class="rounded float-left" alt="..."></span>
-                            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
-                            </div>
-                    </div>
-                    <div id="charRemaining">140 Characters Remaining</div>
-                </div>
-                <div id = "outputText" class = "border" >Ouput Text</div>
-                
-            </div>
+  </head>
 
-    
-</div>  
-  
-   
+  <body>
+    <div class="container">
+      <nav class="nav">
+        <a class="nav-link active" href="#">Active</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
+          >Disabled</a
+        >
+      </nav>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-4 border">
+          <div id="userInfo" class="border">userInfo</div>
+          <div id="highLight" class="border">highLight</div>
+          <div id="hasTag" class="border">hasTag</div>
+          <div id="Friends" class="border">Friends</div>
+        </div>
+        <div class="col-8 border">
+          <div class="border">
+            <div class="input-group mb-3">
+              <span><img src="#" class="rounded float-left" alt="ava"/></span>
+              <input
+                id="inputText"
+                type="text"
+                class="form-control"
+                placeholder="What's up..?"
+                aria-label=""
+                aria-describedby="button-addon2"
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-outline-secondary"
+                  type="button"
+                  id="button-addon2 tweetButton"
+                >
+                  Button
+                </button>
+              </div>
+            </div>
+            <div id="charRemaining">140 Characters Remaining</div>
+          </div>
+          <div id="outputText" class="border">Ouput Text</div>
+        </div>
+      </div>
+    </div>
 
     <footer>
       <div class="container pt-2 mt-2 border-top border-success">
@@ -115,8 +116,8 @@
         </div>
       </div>
     </footer>
-
-    <script
+    <script src="mini-diary.js"></script>
+    <!-- <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
@@ -130,8 +131,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
       integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
       crossorigin="anonymous"
-    ></script>
-    <script scr="mini-diary.js"></script>
+    ></script> -->
   </body>
-
 </html>
