--- a/mini-diary.html
+++ b/mini-diary.html
@@ -59,23 +59,61 @@
     <div class="container">
       <div class="row">
         <div class="col-4">
-          <div id="userInfo">
-            <div class="card" style="width: 18rem;">
-              <img
-                class="card-img-top "
-                src="img/sampleava.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 id="userName" class="card-title">USER NAME</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary"></a>
+          <div class="row">
+            <div id="userInfo">
+              <div class="card" style="width: 20rem;">
+                <img
+                  class="card-img-top "
+                  src="img/sampleava.jpg"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 id="userName" class="card-title">USER NAME</h5>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary"></a>
+                </div>
               </div>
             </div>
           </div>
-          <div id="highLight" class="border">highLight</div>
-          <div id="hasTag" class="border">hasTag</div>
-          <div id="Friends" class="border">Friends</div>
+          <div class="row">
+            <div id="highLight" class="card ">
+              <div class="card" style="width: 20rem;">
+                <div class="card-header">Highlight</div>
+                <div class="card-body">
+                  <h5 class="card-text">Ligtle</h5>
+                  <p class="card-text">
+                    Somke up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div id="hashtags" class="card ">
+              <div class="card" style="width: 20rem;">
+                <div class="card-header">Friends</div>
+                <div class="card-body">
+                  <h5 class="card-text">Ligtle</h5>
+                  <p class="card-text">
+                    Somke up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div id="friends" class="card ">
+              <div class="card" style="width: 20rem;">
+                <div class="card-header">Hashtags</div>
+                <div class="card-body">
+                  <h5 class="card-text">Ligtle</h5>
+                  <p class="card-text">
+                    Somke up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="col-8">
           <div class="border">
@@ -101,7 +139,7 @@
                   type="button"
                   id="tweetButton"
                 >
-                  Retweet
+                  Tweet Now
                 </button>
               </div>
             </div>
@@ -112,11 +150,11 @@
       </div>
     </div>
 
-    <button id="openBtn" class="open-button" onclick="openForm()">
+    <!-- <button id="openBtn" class="open-button" onclick="openForm()">
       Open Form
-    </button>
+    </button> -->
 
-    <div class="form-popup" id="myForm">
+    <!-- <div class="form-popup" id="myForm">
       <form class="form-container">
         <h1>Login</h1>
 
@@ -134,7 +172,7 @@
           Close
         </button>
       </form>
-    </div>
+    </div> -->
 
     <footer>
       <div class="container pt-2 mt-2 border-top border-success">
