--- a/mini-diary.html
+++ b/mini-diary.html
@@ -40,6 +40,7 @@
           <a class="nav-link" href="#"><img src="img/noti2.png"/></a>
           <a class="nav-link" href="#"><img src="img/email.png"/></a>
         </div>
+        <div class="blogName">MINI DIARY</div>
         <div class=" d-flex flex-row justify-content-between">
           <form class="form-inline">
             <input
@@ -52,11 +53,11 @@
               Search
             </button>
           </form>
-          <a class="nav-link" href="#"><img src="img/profile.png"/></a>
+          <!-- <a class="nav-link" href="#"><img src="img/profile.png"/></a> -->
         </div>
       </nav>
     </div>
-    <div class="container">
+    <div class="container pl-5">
       <div class="row">
         <div class="col-4">
           <div class="row">
@@ -78,7 +79,7 @@
           <div class="row">
             <div id="highLight" class="card ">
               <div class="card" style="width: 20rem;">
-                <div class="card-header">Highlight</div>
+                <div class="card-header">#TAGS</div>
                 <div class="card-body">
                   <h5 class="card-text">Ligtle</h5>
                   <p class="card-text">
@@ -143,18 +144,18 @@
                 </button>
               </div>
             </div>
-            <div id="charRemaining">140 Characters Remaining</div>
+            <div class="text-right pr-4" id="charRemaining">
+              140 Characters Remaining
+            </div>
           </div>
           <div id="outputText" class="border my-3"></div>
         </div>
       </div>
     </div>
 
-    <!-- <button id="openBtn" class="open-button" onclick="openForm()">
-      Open Form
-    </button> -->
+    <button class="open-button" onclick="openForm()">Open Form</button>
 
-    <!-- <div class="form-popup" id="myForm">
+    <div class="form-popup" id="myForm">
       <form class="form-container">
         <h1>Login</h1>
 
@@ -172,7 +173,7 @@
           Close
         </button>
       </form>
-    </div> -->
+    </div>
 
     <footer>
       <div class="container pt-2 mt-2 border-top border-success">
