fixed tweet function

--- a/mini-diary.html
+++ b/mini-diary.html
@@ -201,41 +201,14 @@
     </div>
 
     <footer>
-      <div class="container pt-2 mt-2 border-top border-success">
+      <div class="container pt-2 mt-2 border-top border-dark">
         <div class="row pt-1">
-          <div class="col-lg-3 col-md-6 d-flex">
-            <ul class="list-group">
-              <li class="list-group-item border-0 bg-transparent">
-                <p class="extra_text text-uppercase minion-font">Resources</p>
-              </li>
-
-              <li class="list-group-item border-0 bg-transparent pb-0">
-                <a href="#" class="text-dark">Venue & Tickets</a>
-              </li>
-              <li class="list-group-item border-0 bg-transparent pb-0">
-                <a href="#" class="text-dark">Venue & Tickets</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-2 col-md-6 d-flex">
-            <ul class="list-group">
-              <li class="list-group-item border-0 bg-transparent">
-                <p class="extra_text text-uppercase minion-font">Help Center</p>
-              </li>
-              <li class="list-group-item border-0 bg-transparent pb-0">
-                <a href="#" class="text-dark">Venue & Tickets</a>
-              </li>
-            </ul>
-          </div>
+          <div class="col-lg-3 col-md-6 d-flex"></div>
+          <div class="col-lg-2 col-md-6 d-flex"></div>
         </div>
-        <div class="row pt-4 justify-content-start mt-5">
-          <p class="">
-            Copyright © 2019 Two App Studio Pte. Ltd., Singapore
-          </p>
-
-          <p>
-            Journey is a registered trademark ® and trademark™ of Two App Studio
-            Pte. Ltd
+        <div class="row pt-4 justify-content-center ">
+          <p class="text-center">
+            Copyright © 2019 MINI BLOG. Ltd., VN
           </p>
         </div>
       </div>
