--- a/mini-diary.html
+++ b/mini-diary.html
@@ -75,6 +75,7 @@
                   <p class="card-text font-italic">
                     "The best for preparation tomorrow is doing you best today."
                   </p>
+                  <p id="totalTweet">Tweets</p>
                 </div>
               </div>
             </div>
@@ -85,12 +86,12 @@
                 <div class="card-header">
                   <span class=" mr-5">#TAGS </span
                   ><span class="ml-5"
-                    ><a onclick="showAll()" href="">Show All</a></span
+                    ><a onclick="showAll()" href="">Show All Tweets</a></span
                   >
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-text">Most Recent</h5>
+                  <!-- <h5 class="card-text">Most Recent</h5> -->
                   <p id="hashTagHTML" class="card-text"></p>
                 </div>
               </div>
@@ -178,7 +179,7 @@
       </div>
     </div>
 
-    <button class="open-button" onclick="openForm()">Open Form</button>
+    <button class="open-button" onclick="openForm()">LOGIN</button>
 
     <div class="form-popup" id="myForm">
       <form class="form-container">
