update fetch api

--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
                 <div class="card-body">
                   <p class="card-text">
                     <img
-                      class="img-radius mx-2"
+                      class="img-radius mx-1"
                       src="img/sampleava.jpg"
                       alt="ava"
                     />
                     <img
-                      class="img-radius mx-2"
+                      class="img-radius mx-3"
                       src="img/sampleava.jpg"
                       alt="ava"
                     />
                     <img
-                      class="img-radius mx-2"
+                      class="img-radius mx-3"
                       src="img/sampleava.jpg"
                       alt="ava"
                     />
                     <img
-                      class="img-radius mx-2"
+                      class="img-radius mx-1"
                       src="img/sampleava.jpg"
                       alt="ava"
                     />
@@ -179,7 +179,7 @@
       </div>
     </div>
 
-    <button class="open-button" onclick="openForm()">LOGIN</button>
+    <button id="logOut" class="open-button" onclick="openForm()">LOGIN</button>
 
     <div class="form-popup" id="myForm">
       <form class="form-container">
