--- a/index.html
+++ b/index.html
@@ -147,9 +147,8 @@
             <div class="input-group my-3 float-lg-right ">
               <span
                 ><img
-                  class="img-radius"
+                  class="img-radius rounded float-left"
                   src="img/sampleava.jpg"
-                  class="rounded float-left"
                   alt="ava"
               /></span>
               <div
