--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
               <div class="card" style="width: 20rem;">
                 <img
                   class="card-img-top "
-                  src="img/sampleava.jpg"
+                  src="img/testava1.jpg"
                   alt="Card image cap"
                 />
                 <div class="card-body">
-                  <h5 id="userName" class="card-title">USER NAME</h5>
+                  <h5 id="userName" class="card-title h4">USER NAME</h5>
                   <p class="card-text font-italic">
                     "The best for preparation tomorrow is doing you best today."
                   </p>
-                  <p id="totalTweet">Tweets</p>
+                  <p id="totalTweet" class="h5">Tweets</p>
                 </div>
               </div>
             </div>
@@ -110,12 +110,12 @@
                     />
                     <img
                       class="img-radius mx-3"
-                      src="img/sampleava.jpg"
+                      src="img/testava1.jpg"
                       alt="ava"
                     />
                     <img
                       class="img-radius mx-3"
-                      src="img/sampleava.jpg"
+                      src="img/testava.jpg"
                       alt="ava"
                     />
                     <img
@@ -148,7 +148,7 @@
               <span
                 ><img
                   class="img-radius rounded float-left"
-                  src="img/sampleava.jpg"
+                  src="img/testava.jpg"
                   alt="ava"
               /></span>
               <div
