--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
                 <div class="card-header">
                   <span class=" mr-5">#TAGS </span
                   ><span class="ml-5"
-                    ><a onclick="showAll()" href="">Show All Tweets</a></span
+                    ><a onclick="showAll()" href="javascript:void();"
+                      >Show All Tweets</a
+                    ></span
                   >
                 </div>
 
