--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
                 />
                 <div class="card-body">
                   <h5 id="userName" class="card-title h4">USER NAME</h5>
-                  <p class="card-text font-italic">
-                    "The best for preparation tomorrow is doing you best today."
-                  </p>
+                  <p id="quote" class="card-text font-italic"></p>
                   <p id="totalTweet" class="h5">Tweets</p>
                 </div>
               </div>
