--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
           <div class="row ">
             <div id="userInfo">
               <div class="card" style="width: 20rem;">
-                <img
-                  class="card-img-top "
-                  src="img/testava1.jpg"
-                  alt="Card image cap"
-                />
+                <div id="userAva"></div>
                 <div class="card-body">
                   <h5 id="userName" class="card-title h4">USER NAME</h5>
                   <p id="quote" class="card-text font-italic"></p>
@@ -145,12 +141,7 @@
         >
           <div class="border">
             <div class="input-group my-3 float-lg-right ">
-              <span
-                ><img
-                  class="img-radius rounded float-left"
-                  src="img/testava.jpg"
-                  alt="ava"
-              /></span>
+              <span id="tweetAva"></span>
               <div
                 id="inputText"
                 contenteditable="true"
